      Also notice the 'sherlock-support-v4-stub.jar_' file in the libs folder.
    * RESTClient lost proxy support but now provides access to underlying HTTPWorkers for fine-tuning.
    * RESTClient now supports setting a AuthScope for HTTP Basic Authentication.
    * Fixed RESTClient not requesting GZIP when using HttpURLConnectionWorker.
    * Removed 'legacy' module & Loader subclasses.
    * DroidParts now doesn't use any xml resources. Which means it can be used as pure .jars placed in the libs folder.

0.9.3 /2012-12-16/:
    * Mavenized. Thanks to @emartynov.
    * RESTClient tweaks & fixes.

0.9.2 /2012-12-02/:
    * Fixes.

0.9.1 /2012-11-25/:
    * Minor yet neat changes.

0.9.0 /2012-11-19/:
    * DB: fixed '_id' suffix erroneously appended to autogenerated non-pk column names. 

0.8.9 /2012-11-09/:
    * We have cookies too: cookie cache for RESTClient.
    * Injector cleanup.

0.8.8 /2012-10-27/:
    * Changed setInvisible(), setGone() methods to support multiple Views at once.
    * Added a workaround for a common AsyncTask bug.
    * Removed FragmentsInjector, generic Injector can now handle it.
    * More awesomeness with less SLOCs.

0.8.7 /2012-10-21/:
    * Changed RESTClient to return HTTPResponses with status code, headers & body.
    * RESTClient now fully utilizes HttpURLConnection on API >= 10.
    * Added isInjected() to Fragments.
    * Misc fixes & backwards-incompatible changes. Muhaha.

0.8.5 /2012-10-15/:
    * Renamed droidparts-modern to droidparts-modern-sherlock; added droidparts-modern-native.
    * Improved dependency injection speed.
    * setReloadMenuItem => setActionBarReloadMenuItem(), setSupportProgressBarIndeterminateVisibility() => setActionBarLoadingIndicatorVisible().
    * Other tweaks & minor API changes.
    
0.8.0 /2012-09-26/:
    * EntityMananger: added readFirstFromCursor(), readAllFromCursor(), removed list().
    * Changed EntityCursorAdapter constructors, one of them now accepts Select object.