@@ -16,54 +16,54 @@
 package org.droidparts.util;
 
 import static org.droidparts.util.io.IOUtils.silentlyClose;
+import static org.droidparts.util.ui.ViewUtils.crossFade;
 import static org.droidparts.util.ui.ViewUtils.setInvisible;
 
 import java.io.BufferedInputStream;
 import java.io.File;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadPoolExecutor;
 
 import org.droidparts.http.RESTClient;
 import org.droidparts.util.io.BitmapCacher;
-import org.droidparts.util.ui.ViewUtils;
 
 import android.content.Context;
 import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
 import android.os.Handler;
 import android.os.Looper;
-import android.util.Pair;
 import android.view.View;
 import android.widget.ImageView;
 
 public class ImageAttacher {
 
 	private final BitmapCacher bitmapCacher;
-	private final ExecutorService executorService;
+	private final ThreadPoolExecutor executor;
 	private final RESTClient restClient;
 	private Handler handler;
 
-	private final ConcurrentHashMap<ImageView, Pair<String, View>> data = new ConcurrentHashMap<ImageView, Pair<String, View>>();
+	private final ConcurrentHashMap<ImageView, Long> currWIP = new ConcurrentHashMap<ImageView, Long>();
 
 	private int crossFadeAnimationDuration = 400;
 
 	public ImageAttacher(Context ctx) {
-		this(ctx, Executors.newSingleThreadExecutor(), new RESTClient(ctx));
+		this(ctx, (ThreadPoolExecutor) Executors.newFixedThreadPool(1),
+				new RESTClient(ctx));
 	}
 
-	public ImageAttacher(Context ctx, ExecutorService executorService,
+	public ImageAttacher(Context ctx, ThreadPoolExecutor executor,
 			RESTClient restClient) {
 		this(
 				new AppUtils(ctx).getExternalCacheDir() != null ? new BitmapCacher(
 						new File(new AppUtils(ctx).getExternalCacheDir(), "img"))
-						: null, executorService, restClient);
+						: null, executor, restClient);
 	}
 
 	public ImageAttacher(BitmapCacher bitmapCacher,
-			ExecutorService executorService, RESTClient restClient) {
+			ThreadPoolExecutor executor, RESTClient restClient) {
 		this.bitmapCacher = bitmapCacher;
-		this.executorService = executorService;
+		this.executor = executor;
 		this.restClient = restClient;
 		handler = new Handler(Looper.getMainLooper());
 	}
@@ -73,15 +73,14 @@ public class ImageAttacher {
 	}
 
 	public void attachImage(ImageView imageView, String imgUrl) {
-		addAndExecute(imageView, new Pair<String, View>(imgUrl, null));
+		addAndExecute(null, imageView, imgUrl);
 	}
 
 	public void attachImageCrossFaded(View placeholderView,
 			ImageView imageView, String imgUrl) {
 		setInvisible(false, placeholderView);
 		setInvisible(true, imageView);
-		addAndExecute(imageView,
-				new Pair<String, View>(imgUrl, placeholderView));
+		addAndExecute(placeholderView, imageView, imgUrl);
 	}
 
 	protected Bitmap onSuccess(ImageView imageView, String url, Bitmap bm) {
@@ -92,13 +91,17 @@ public class ImageAttacher {
 		L.e(e);
 	}
 
-	protected final BitmapCacher getBitmapCacher() {
+	protected BitmapCacher getBitmapCacher() {
 		return bitmapCacher;
 	}
 
-	private void addAndExecute(ImageView view, Pair<String, View> pair) {
-		data.put(view, pair);
-		executorService.execute(fetchAndAttachRunnable);
+	private void addAndExecute(View placeholderView, ImageView view, String url) {
+		long time = System.nanoTime();
+		currWIP.put(view, time);
+		Runnable r = new FetchAndCacheBitmapRunnable(placeholderView, view,
+				url, time);
+		executor.remove(r);
+		executor.execute(r);
 	}
 
 	public Bitmap getCachedOrFetchAndCache(String fileUrl) throws Exception {
@@ -124,48 +127,88 @@ public class ImageAttacher {
 		return bm;
 	}
 
-	private final Runnable fetchAndAttachRunnable = new Runnable() {
+	//
+
+	static abstract class ImageViewWorkerRunnable implements Runnable {
+
+		protected final View placeholderView;
+		protected final ImageView imageView;
+
+		public ImageViewWorkerRunnable(View placeholderView, ImageView imageView) {
+			this.placeholderView = placeholderView;
+			this.imageView = imageView;
+		}
+
+		@Override
+		public boolean equals(Object o) {
+			boolean eq = false;
+			if (this == o) {
+				eq = true;
+			} else if (o instanceof ImageViewWorkerRunnable) {
+				eq = imageView.equals(((ImageViewWorkerRunnable) o).imageView);
+			}
+			return eq;
+		}
+
+		@Override
+		public int hashCode() {
+			return imageView.hashCode();
+		}
+	}
+
+	// TODO make static
+	class FetchAndCacheBitmapRunnable extends ImageViewWorkerRunnable {
+
+		private final String fileUrl;
+		private final long submitted;
+
+		public FetchAndCacheBitmapRunnable(View placeholderView,
+				ImageView imageView, String fileUrl, long submitted) {
+			super(placeholderView, imageView);
+			this.fileUrl = fileUrl;
+			this.submitted = submitted;
+
+		}
 
 		@Override
 		public void run() {
-			for (ImageView imageView : data.keySet()) {
-				Pair<String, View> pair = data.get(imageView);
-				data.remove(imageView);
-				if (pair != null) {
-					String fileUrl = pair.first;
-					View placeholderView = pair.second;
-					Bitmap bm = null;
-					try {
-						bm = getCachedOrFetchAndCache(fileUrl);
-					} catch (Exception e) {
-						onFailure(imageView, fileUrl, e);
-					}
-					if (bm != null && !data.containsKey(imageView)) {
-						bm = onSuccess(imageView, fileUrl, bm);
-						AttachRunnable r = new AttachRunnable(placeholderView,
-								imageView, bm);
-						boolean success = handler.post(r);
-						if (!success) {
-							handler = new Handler(Looper.getMainLooper());
-							success = handler.post(r);
-						}
-					}
+			Bitmap bm = null;
+			try {
+				bm = getCachedOrFetchAndCache(fileUrl);
+			} catch (Exception e) {
+				onFailure(imageView, fileUrl, e);
+			}
+			if (bm != null && (currWIP.get(imageView) == submitted)) {
+				currWIP.remove(imageView);
+				bm = onSuccess(imageView, fileUrl, bm);
+				AttachBitmapRunnable r = new AttachBitmapRunnable(
+						placeholderView, imageView, bm,
+						crossFadeAnimationDuration);
+				boolean success = handler.post(r);
+				if (!success) {
+					handler = new Handler(Looper.getMainLooper());
+					success = handler.post(r);
 				}
 			}
 		}
-	};
 
-	private class AttachRunnable implements Runnable {
+		@Override
+		public String toString() {
+			return getClass().getSimpleName() + ": " + fileUrl;
+		}
 
-		private final ImageView imageView;
-		private final Bitmap bitmap;
-		private final View placeholderView;
+	}
 
-		public AttachRunnable(View placeholderView, ImageView imageView,
-				Bitmap bitmap) {
-			this.placeholderView = placeholderView;
-			this.imageView = imageView;
+	static class AttachBitmapRunnable extends ImageViewWorkerRunnable {
+
+		protected final Bitmap bitmap;
+		private final int crossFadeAnimationDuration;
+
+		public AttachBitmapRunnable(View placeholderView, ImageView imageView,
+				Bitmap bitmap, int crossFadeAnimationDuration) {
+			super(placeholderView, imageView);
 			this.bitmap = bitmap;
+			this.crossFadeAnimationDuration = crossFadeAnimationDuration;
 		}
 
 		@Override
@@ -173,7 +216,7 @@ public class ImageAttacher {
 			imageView.setImageBitmap(bitmap);
 			if (placeholderView != null) {
 				if (crossFadeAnimationDuration > 0) {
-					ViewUtils.crossFade(placeholderView, imageView,
+					crossFade(placeholderView, imageView,
 							crossFadeAnimationDuration, null);
 				} else {
 					setInvisible(false, imageView);
